# pcap-anonymize

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
pcap_anonymize/: __init__.py  __main__.py  cli.py  pcap_anonymize.py
pcap_anonymize/app_layer/: __init__.py  http.py  tplink.py
pcap_anonymize/layers/: __init__.py  coap.py  http.py  mac.py
pcap_anonymize/mac/: __init__.py  arp.py  dhcp.py  ether.py  utils.py
test/: __init__.py  test_coap.py  test_http.py  test_mac.py  test_tplink.py  test_traces.py
test/app_layer/: __init__.py  test_coap.py  test_http.py  test_tplink.py
test/mac/: __init__.py  test_arp.py  test_dhcp.py  test_ether.py  test_utils.py
test/traces/: .gitignore  dhcp.pcap  http.pcap  tplink.pcap
