[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pcap-anonymize"
version = "0.2.0"
description = "Anonymize PCAP files"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ["network", "traffic", "pcap", "anonymize"]
authors = [
  {name = "François De Keersmaeker", email = "francois.dekeersmaeker+github@proton.me" }
]
maintainers = [
  {name = "François De Keersmaeker", email = "francois.dekeersmaeker+github@proton.me" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",

  "Operating System :: OS Independent"
]

dependencies = [
  "scapy==2.6.1"
]

[project.urls]
"Homepage" = "https://github.com/smart-home-network-security/pcap-anonymize"
"Source" = "https://github.com/smart-home-network-security/pcap-anonymize"

[project.scripts]
pcap-anonymize = "pcap_anonymize:__main__.main"
pcap_anonymize = "pcap_anonymize:__main__.main"
